--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^3.26.11",
+    "axios": "^0.19.2",
     "bootstrap-css-only": "^4.4.1",
+    "connected-react-router": "^6.7.0",
     "history": "^4.10.1",
+    "json-web-token": "^3.2.0",
+    "mdbreact": "^4.25.2",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "redux": "^4.0.5",
+    "redux-immutable-state-invariant": "^2.1.0",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.0.1"
   },
   "scripts": {
